apps/virtualmachines/base/namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.36.0/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: virtualmachines
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/autit: privileged
